Changes in @NEW@:
  o Bug Fixes:
    * CheckinCallback moved from cvc to commit in order to prevent
      conary from depending on conary-build. (CNY-3314)
    * Zero epochs are no longer stored as NULL in the troveInfo.
      (CNY-3350)

Changes in 2.1.6:
  o Bug Fixes:
    * A bug in the getChangeSetFingerprints call that resulted in
      fingerprints different from those calculated by Conary proxies has
      been corrected.
    * Rollbacks no longer fail if a file type changed before and after
      the relevant update has been appliend. (CNY-3340)
    * Ghost files that are part of rpm capsules are marked as being part
      of the changeset (as opposed to being included in the capsule).
      The proxy code that injects contents was made aware of that, to
      avoid creating incomplete changesets. (CNY-3346)

Changes in 2.1.5:
  o Bug Fixes:
    * PythonSetup now respects the r.macros.pyver if it is set;
      r.macros.pyver now reflects the currently running version of
      python if it is not set by other means. (CNY-3325)
    * The documentation for the Automake build action was corrected.
      (CNY-3329)
    * A bug in unusual commit paths, that would cause repositories to
      not store file contents for contents which were part of capsules
      as well as part of normal troves, was fixed. (CNY-3332)
    * RPM capsules properly update when files stayed the same between
      old and new versions of the RPM. (CNY-3335)
    * Ghost symlinks shared between multiple capsules being packaged
      together as part of the same conary source component no longer
      cause the build to fail. (CNY-3336)

Changes in 2.1.4:
  o Bug Fixes:
    * A redundant check that could trigger an assertion error in
      the lazy cache code has been removed. (CNY-3331)

Changes in 2.1.3
  o New Features:
    * Conary now stores RPM obsolete information as troveinfo data.
      (CNY-3328)

  o Bug Fixes:
    * Building rpm capsules properly eliminates dependencies in the